prod/tvplatform-factory-cacheserver/ingress.yml


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: factory-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: tvplatform-factory-cacheserver
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.factory.ooro.co.uk
        - factory.ooro.co.uk
      secretName: factory-ca
  rules:
    - host: factory.ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-factory-cacheserver
                port:
                  number: 8000
    - host: www.factory.ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-factory-cacheserver
                port:
                  number: 8000
